fix: url nav deploy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul class="hidden lg:flex h-full gap-4 text-white">
             <li class="group relative">
               <a
-                href="/#home"
+                href="https://rifqi142.github.io/#home"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 Home
@@ -35,7 +35,7 @@
             </li>
             <li class="group relative">
               <a
-                href="/#about"
+                href="https://rifqi142.github.io/#about"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 About
@@ -46,7 +46,7 @@
             </li>
             <li class="group relative">
               <a
-                href="/#skill"
+                href="https://rifqi142.github.io/#skill"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 Skills
@@ -57,7 +57,7 @@
             </li>
             <li class="group relative">
               <a
-                href="/#project"
+                href="https://rifqi142.github.io/#project"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 Project
@@ -68,7 +68,7 @@
             </li>
             <li class="group relative">
               <a
-                href="/#experience"
+                href="https://rifqi142.github.io/#experience"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 Experience
@@ -79,7 +79,7 @@
             </li>
             <li class="group relative">
               <a
-                href="/#contact"
+                href="https://rifqi142.github.io/#contact"
                 class="text-xl md:text-lg font-bold pb-1.5 transition-all duration-300 hover:text-blue-500"
               >
                 Contact
@@ -107,7 +107,7 @@
         >
           <li class="group relative">
             <a
-              href="/#home"
+              href="https://rifqi142.github.io/#home"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >Home</a
             >
@@ -117,7 +117,7 @@
           </li>
           <li class="group relative">
             <a
-              href="/#about"
+              href="https://rifqi142.github.io/#about"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >About</a
             >
@@ -127,7 +127,7 @@
           </li>
           <li class="group relative">
             <a
-              href="/#skill"
+              href="https://rifqi142.github.io/#skill"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >Skills</a
             >
@@ -137,7 +137,7 @@
           </li>
           <li class="group relative">
             <a
-              href="/#project"
+              href="https://rifqi142.github.io/#project"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >Project</a
             >
@@ -147,7 +147,7 @@
           </li>
           <li class="group relative">
             <a
-              href="/#experience"
+              href="https://rifqi142.github.io/#experience"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >Experience</a
             >
@@ -157,7 +157,7 @@
           </li>
           <li class="group relative">
             <a
-              href="/#contact"
+              href="https://rifqi142.github.io/#contact"
               class="block p-2 lg:p-4 text-base lg:text-lg font-bold transition-all duration-300 hover:text-blue-500"
               >Contact</a
             >
