--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 1 | Portofolio Website</title>
     <link rel="stylesheet" href="style.css" />
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.30/esri/themes/light/main.css"
+    />
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -306,6 +313,7 @@
           </div>
           <div
             class="inline-flex flex-row flex-wrap justify-center items-center mt-10 gap-4 bg-white py-4 px-4 rounded-lg"
+            id="list-tools"
           >
             <a
               href="https://www.postman.com/docs/"
@@ -1143,8 +1151,21 @@
               </form>
             </div>
           </div>
-          <hr class="mt-16 h-line" />
         </div>
+
+        <!-- location -->
+        <div
+          class="px-5 lg:px-52 pb-10 xl:pb-20 w-full flex flex-col justify-center items-center mt-10"
+        >
+          <div class="location flex flex-col justify-center items-center">
+            <h3 class="text-4xl leading-tight font-bold text-white">
+              Location
+            </h3>
+            <hr class="mt-3 h-line w-56" />
+          </div>
+          <div id="viewDiv"></div>
+        </div>
+        <hr class="mt-16 h-line" />
       </div>
     </div>
     <!-- footer -->
@@ -1268,6 +1289,23 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
+    </script>
+    <script src="https://js.arcgis.com/4.30/"></script>
+
+    <script>
+      require(["esri/Map", "esri/views/MapView"], (Map, MapView) => {
+        console.log(MapView);
+        const map = new Map({
+          basemap: "topo-vector",
+        });
+
+        const view = new MapView({
+          container: "viewDiv",
+          map: map,
+          zoom: 18,
+          center: [106.7803626, -6.2443009],
+        });
+      });
     </script>
   </body>
 </html>
